--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "paste-frontend",
+  "name": "pastebin-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,9 +7,18 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.9.0",
+    "framer-motion": "^12.11.3",
+    "install": "^0.13.0",
+    "lucide-react": "^0.510.0",
+    "npm": "^11.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.18",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -35,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.17"
   }
 }
